formal version can deploy to eks